# ponpon

./: README.md  pyproject.toml
src/ponpon/: __init__.py
src/ponpon/app/: main.py
src/ponpon/infra/: config.py
src/ponpon/tracking/: camera.py  mediapipe_hands.py
