[project]
name = "ponpon"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Kevin Hernandez", email = "kevinhernem@gmail.com" }
]
requires-python = ">=3.11"
dependencies = []

[project.scripts]
ponpon = "ponpon:main"

[build-system]
requires = ["uv_build>=0.9.18,<0.10.0"]
build-backend = "uv_build"
